tests/snapshots/cli__reference_files@grouping__1.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/1.grouping
---
status: 0
stdout:
  - "-6550474.502023858"
stderr: []
