tests/snapshots/cli__reference_files@grouping__10.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/10.grouping
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/interpreter.rs:43:55:"
  - attempt to divide by zero
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
