tests/snapshots/cli__reference_files@grouping__12.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/12.grouping
---
status: 0
stdout:
  - "388046510757832060"
stderr: []
