tests/snapshots/cli__reference_files@grouping__13.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/13.grouping
---
status: 0
stdout:
  - "41697972664110.836"
stderr: []
