tests/snapshots/cli__reference_files@grouping__14.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/14.grouping
---
status: 0
stdout:
  - "inf"
stderr: []
