tests/snapshots/cli__reference_files@grouping__16.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/16.grouping
---
status: 0
stdout:
  - "493925073530800.9"
stderr: []
