tests/snapshots/cli__reference_files@grouping__18.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/18.grouping
---
status: 0
stdout:
  - "-1043.1079432696215"
stderr: []
