tests/snapshots/cli__reference_files@grouping__2.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/2.grouping
---
status: 0
stdout:
  - "-841599655.4474292"
stderr: []
